<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IfOnly</string>
    <string name="main_menu_make_vid_btn_lbl">Make a 1 minute film to show your issues.</string>
    <string name="main_menu_view_vids_lbl">View Video Archive</string>
    <string name="main_menu_household_lbl">Household</string>
    <string name="main_menu_household_products_lbl">Household Products</string>
    <string name="main_menu_garden_lbl">Garden Products</string>
    <string name="main_menu_electrical_lbl">Electrical Goods</string>
    <string name="main_menu_tools_lbl">Tools/Machinery</string>
    <string name="main_menu_personal_lbl">Personal Products</string>
    <string name="main_menu_misc_lbl">Miscellaneous</string>
    <string name="back_lbl">Back</string>
    <string name="choose_vid_title_lbl">Your Video</string>
    <string name="choose_vid_add_vid_lbl">Choose Your Video</string>
    <string name="choose_vid_camera_lbl">Camera</string>
    <string name="choose_vid_cancel_lbl">Cancel</string>
    <string name="choose_vid_library_lbl">Library</string>
    <string name="cancelled">Cancelled!</string>
    <string name="choose_category_dialog_title_lbl">Pick a category</string>
    <string name="upload_vid_top_bar_title">Upload video</string>
   	<string name="upload_vid_add_note">Add note</string>
   	<string name="upload_vid_add_tags">Add tags</string>
   	<string name="upload_vid_add_tags_tooltip">
   		Add keywords like the manufacturer, model, and product type e.g. can opener. Separate each keyword with a comma.
   	</string>
   	<string name="upload_vid_progress_dialog_title">Uploading. Please wait...</string>
   	<string name="upload_vid_successful">Video upload successful.</string>
   	<string name="upload_vid_error">Video upload error.</string>
   	<string name="video_list_seconds">%1$d seconds</string>
   	<string name="video_list_progress_dialog_title">Please wait...</string>
   	<string name="video_list_order_by">Order by</string>
   	<string name="video_list_order_by_date">Order by newest</string>
   	<string name="video_list_order_by_views">Order by most viewed</string>
   	<string name="video_list_search">Search</string>
   	<string name="video_list_error">Unexpected error occured</string>
   	<string name="video_list_all_videos">All videos</string>
   	<string name="video_list_no_videos">No videos yet!</string>
   	<string name="competition_title">Competition</string>
   	<string name="about_title">About if Only</string>
   	<string name="categories_title">if Only video archive</string>
</resources>
