<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/frameLayout1"  
	android:layout_height="fill_parent" 
	android:layout_width="fill_parent"
	android:background="@color/white">
	<LinearLayout 
		android:orientation="vertical"
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent" 
		android:weightSum="10">
		<ImageView 
			android:layout_width="fill_parent"
			android:layout_height="0dip" 
			android:src="@drawable/top_bar"
			android:layout_weight="1" 
			android:padding="0dip"
			android:layout_margin="0dip"/>
		<TextView 
			android:layout_width="fill_parent"
			android:layout_height="0dip" 
			android:textColor="@color/white"
			android:textSize="18dip"
			android:gravity="left|center_vertical"
			android:typeface="sans" 
			android:textStyle="bold"
			android:paddingLeft="75dip"
			android:paddingRight="20dip"
			android:id="@+id/main_menu_make_vid_btn_id"
			android:text="@string/main_menu_make_vid_btn_lbl" 
			android:background="@drawable/main_menu_make_vid_btn"
			android:layout_weight="2" />
		<TextView 
			android:layout_width="fill_parent"
			android:layout_height="0dip" 
			android:textColor="@color/black"
			android:textSize="16dip"
			android:gravity="center"
			android:typeface="sans" 
			android:textStyle="bold"
			android:id="@+id/main_menu_view_vids_id"
			android:text="@string/main_menu_view_vids_lbl" 
			android:background="@color/white"
			android:layout_weight="1" />
				<LinearLayout 
					android:orientation="horizontal"
					android:layout_width="fill_parent" 
					android:layout_height="0dip"
					android:layout_weight="1.8"
					android:weightSum="798">
					<TextView 
						android:layout_width="0dip"
						android:textColor="@color/black"
						android:textSize="12dip"
						android:gravity="bottom|center_horizontal"
						android:typeface="sans" 
						android:textStyle="bold"
						android:id="@+id/main_menu_household_id"
						android:layout_height="wrap_content" 
						android:text="@string/main_menu_household_lbl" 
						android:background="@drawable/main_menu_household_btn"
						android:layout_weight="213" />
					<TextView 
						android:layout_width="0dip"
						android:textColor="@color/black"
						android:textSize="12dip"
						android:gravity="bottom|center_horizontal"
						android:typeface="sans" 
						android:textStyle="bold"
						android:id="@+id/main_menu_garden_id"
						android:layout_height="wrap_content" 
						android:text="@string/main_menu_garden_lbl" 
						android:background="@drawable/main_menu_garden_tools_btn"
						android:layout_weight="274" />
					<TextView 
						android:layout_width="0dip"
						android:textColor="@color/black"
						android:textSize="12dip"
						android:gravity="bottom|center_horizontal"
						android:typeface="sans" 
						android:textStyle="bold"
						android:id="@+id/main_menu_electrical_id"
						android:layout_height="wrap_content" 
						android:text="@string/main_menu_electrical_lbl" 
						android:background="@drawable/main_menu_electrical_goods_btn"
						android:layout_weight="311" />
				</LinearLayout>
				<LinearLayout 
					android:orientation="horizontal"
					android:layout_width="fill_parent" 
					android:layout_height="0dip"
					android:layout_weight="1.8"
					android:weightSum="801">
					<TextView 
						android:layout_width="0dip"
						android:textColor="@color/black"
						android:textSize="12dip"
						android:gravity="bottom|center_horizontal"
						android:typeface="sans" 
						android:textStyle="bold"
						android:id="@+id/main_menu_tools_id"
						android:layout_height="wrap_content" 
						android:text="@string/main_menu_tools_lbl" 
						android:background="@drawable/main_menu_tools_btn"
						android:layout_weight="264" />
					<TextView 
						android:layout_width="0dip"
						android:textColor="@color/black"
						android:textSize="12dip"
						android:gravity="bottom|center_horizontal"
						android:typeface="sans" 
						android:textStyle="bold"
						android:id="@+id/main_menu_personal_id"
						android:layout_height="wrap_content" 
						android:text="@string/main_menu_personal_lbl" 
						android:background="@drawable/main_menu_personal_prod_btn"
						android:layout_weight="292" />
					<TextView 
						android:layout_width="0dip"
						android:textColor="@color/black"
						android:textSize="12dip"
						android:gravity="bottom|center_horizontal"
						android:typeface="sans" 
						android:textStyle="bold"
						android:id="@+id/main_menu_misc_id"
						android:layout_height="wrap_content" 
						android:text="@string/main_menu_misc_lbl" 
						android:background="@drawable/main_menu_misc_btn"
						android:layout_weight="245" />
				</LinearLayout>
			<ImageView 
				android:layout_width="fill_parent"
				android:layout_height="0dip" 
				android:src="@drawable/main_menu_botton_bar"
				android:layout_weight="2.4" 
				android:padding="0dip"
				android:layout_margin="0dip"/>	
	</LinearLayout>
</FrameLayout>
